--- a/margin.html
+++ b/margin.html
@@ -1145,7 +1145,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td width="3%" valign="top">1. </td>
                 <td width="97%">
-                    The Applicant (the “Client”) hereby authorize and request Grand Partners Securities Limited (“GPSL”) to open and maintain a margin securities
+                    <p class="linespace1-5">The Applicant (the “Client”) hereby authorize and request Grand Partners Securities Limited (“GPSL”) to open and maintain a margin securities
 trading account (“Margin Account”) in the name of the Client for the purchases, sales, holdings of and any other dealings in securities as the Client
 may instruct “GPSL” as the Client’s agent from time to time on the Client’s behalf. The Account shall be maintained and all such purchases, sales,
 holdings of and any other dealings in securities shall be effected subject to and in accordance with the provisions of the Authorization for the opening
@@ -1155,16 +1155,16 @@ Acknowledgement Letter, form an integral part for the opening of the “Margin A
 申請人(下稱“客戶”)授權要求利盟證券有限公司 (“下稱利盟證券”) 以客戶(等)名義開立並操作一個保證金證券交易帳戶(“保證金帳戶”)，
 以執行客戶(等)不時的指示並由 “利盟證券”以代理人身份為客戶(等)購入、賣出、保管或處理各類證券。有關保證金帳戶之運作須受本保
 證金客戶開戶授權書及保證金客戶協議書規限，”利盟證券”可依情況全權決定該保證金客戶協議書內容使用與否。客戶(等)確認該保證金
-客戶協議書、風險披露聲明及客戶確認信等作為本帳戶開戶組成之一部份，並確認已收訖一份已簽署的客戶協議書。
+客戶協議書、風險披露聲明及客戶確認信等作為本帳戶開戶組成之一部份，並確認已收訖一份已簽署的客戶協議書。</p>
                 </td>
             </tr>
             <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr class="mt-10">
                 <td width="3%" valign="top" >2. </td>
                 <td width="97%">
-                    For the purpose of opening the “Margin Account”, The Client enclose the duly completed and signed Account Opening Information, address proof
+                    <p class="linespace1-5">For the purpose of opening the “Margin Account”, The Client enclose the duly completed and signed Account Opening Information, address proof
                     and Client’s copies of Hong Kong Identity Cards / passport(s). <br>
-                    為開立上述保證金帳戶，客戶(等)現附上一份已填寫及簽署的客戶開戶資料、地址證明及身份證/ 護照影印本。
+                    為開立上述保證金帳戶，客戶(等)現附上一份已填寫及簽署的客戶開戶資料、地址證明及身份證/ 護照影印本。</p>
                     
 
                 </td>
@@ -1173,11 +1173,11 @@ Acknowledgement Letter, form an integral part for the opening of the “Margin A
             <tr>
                 <td width="3%" valign="top">3. </td>
                 <td width="97%">
-                    The Client warrant that the information set out in the “Margin Account” Opening Information is true and correct and that “GPSL” is entitled to rely
+                    <p class="linespace1-5"> The Client warrant that the information set out in the “Margin Account” Opening Information is true and correct and that “GPSL” is entitled to rely
 fully on such information to act on Client’s behalf unless and until “GPSL” receive written notice of any change from the Client in accordance with
 the provisions of the “Agreement”. The Client undertake to advise “GPSL” promptly of any material change to such information.<br>
 客戶(等)保証客戶保證金帳戶開戶資料內所載資料均屬真實及正確， “利盟證券”在未收到客戶(等)據客戶協議書規定發出的資料變更書面
-通知前， “利盟證券”有權依據該等資料行事，若該等資料有變更，客戶(等)即儘快通知 “利盟證券”。
+通知前， “利盟證券”有權依據該等資料行事，若該等資料有變更，客戶(等)即儘快通知 “利盟證券”。</p>
 
                 </td>
             </tr>
@@ -1187,7 +1187,7 @@ the provisions of the “Agreement”. The Client undertake to advise “GPSL”
                 <td width="97%">
                     The Client confirms that:-<br>
                     客戶(等)茲確認:-
-                    <ol type="a">
+                    <ol type="a" class="linespace1-5">
                         <li>
                             the individuals whose names are listed in the “Margin Account” Opening Information are the persons (“Authorized Persons”) authorized on
 Client’s behalf to give “GPSL” oral, telephone or written instructions:
@@ -1235,29 +1235,30 @@ dealer. <br>
             <tr>
                 <td width="3%" valign="top">5. </td>
                 <td>
+                    <p class="linespace1-5">
                     The Client acknowledges that, subject always to “GPSL” ’s discretion not to accept or act on any instructions given by the Client to “GPSL” for
 purchases, sales, holdings and any other instructions of dealings in securities as client’s agent from time to time as provided in the Agreement, “GPSL”
 shall be entitled to rely and act on any such instructions given or apparently, to “GPSL” ’s satisfaction, given from time to time on the Client’s behalf,
 in the case of both oral, telephone and written instructions by any one of the Authorized Persons. <br>
 客戶(等)再次確認 “利盟證券”可據客戶協議書之條款，有完全之酌情權不接納作為客戶(等)之代理人以執行客戶(等)之買賣證券、保管或
-處理各類證券交易等指示，但 “利盟證券”有權根據獲授權人之口頭、電話或書面指示，執行指示。
+處理各類證券交易等指示，但 “利盟證券”有權根據獲授權人之口頭、電話或書面指示，執行指示。</p>
 
                 </td>
             </tr>
             <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">6. </td>
-                <td>The Client agrees that all confirmations and statements in relation to the “Margin Account” issued by “GPSL” to the Client pursuant to the Agreement
+                <td><p class="linespace1-5"><The Client agrees that all confirmations and statements in relation to the “Margin Account” issued by “GPSL” to the Client pursuant to the Agreement
                     shall be conclusive and binding on the Client. <br>
-                    客戶(等)同意有關保證金帳戶項下之一切確認書及結單將對客戶(等)有絕對約束力。
+                    客戶(等)同意有關保證金帳戶項下之一切確認書及結單將對客戶(等)有絕對約束力。/p>
                     </td>
             </tr>
             <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">7. </td>
                 <td>
-                    The Client elects for all trading in securities to be conducted by “GPSL” as Client’s agent on Client’s behalf on the margin basis.<br>
-客戶(等)選擇以保證金形式經 “利盟證券”為代理人進行證券買賣。
+                    <p class="linespace1-5">The Client elects for all trading in securities to be conducted by “GPSL” as Client’s agent on Client’s behalf on the margin basis.<br>
+客戶(等)選擇以保證金形式經 “利盟證券”為代理人進行證券買賣。</p>
 
                 </td>
             </tr>
@@ -1265,11 +1266,11 @@ in the case of both oral, telephone and written instructions by any one of the A
             <tr>
                 <td width="3%" valign="top">8. </td>
                 <td>
-                    I/We declare that the contents of the Authorization for Account Opening, Account Opening Information (together with the Schedules thereto) and the
+                    <p class="linespace1-5"> I/We declare that the contents of the Authorization for Account Opening, Account Opening Information (together with the Schedules thereto) and the
 Agreement (including Risk Disclosure Statements) have been duly explained to me / us in a language (English or Chinese) that I / we understand and
 I / we agree to be bound by the provisions thereof. <br>
 本人(等)在此聲明此開戶授權書、開戶資料 (及其附錄)及客戶協議書 (包括風險披露聲明)之內容，已經向本人(等) 以其明瞭之語言(英文
-或中文) 解釋，本人(等) 並同意接受該等條款及內容之約束。
+或中文) 解釋，本人(等) 並同意接受該等條款及內容之約束。</p>
 
                 </td>
             </tr>
@@ -1278,7 +1279,7 @@ I / we agree to be bound by the provisions thereof. <br>
 
         <div class="clear"></div>
         
-        <div class="page-footer mt-15">
+        <div class="page-footer mt-20">
             <div class="light-p pad left" style="width: 15%;">
                 3
             </div>
@@ -1589,9 +1590,15 @@ opinion if I so wish. <br>
                         Remarks:
                     </td>
                     <td width="67%" colspan="3">
-                        <div class="bod-bottom" >
+                        <div class="bod-bottom" style="height: 50px;" >
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
+                        <div class="bod-bottom" style="height: 50px;">
+                            <!-- <strong>XXXXXXXX</strong> -->
+                          </div>
+                          <div class="bod-bottom" style="height: 50px;">
+                            <!-- <strong>XXXXXXXX</strong> -->
+                          </div>
                     </td>
                 </tr>
         </table>
