--- a/margin.html
+++ b/margin.html
@@ -725,7 +725,7 @@
         <div class="dark-p  pad mt-15">
             SECTION B GENERAL INFORMATION 一般資料
         </div>
-        <div class="">
+        <div class="linespace1-5">
             Details of the Applicant’s bank account for payment of money (if any) by Grand Partners Securities Limited to the Applicant (under the name of the Applicant).
 可供利盟證券有限公司用作支付任何款項 (若有的話) 予申請人之銀行帳戶詳細資料 (需以申請人名義持有)
 Further , the Applicant hereby agrees that if this Account Application is approved by Grand Partners Securities Limited, the bank account below shall be used
@@ -780,9 +780,10 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <table width="100%"> 
             <tr>
                 <td width="5%" valign="top">(1)</td>
-                <td>A person licensed by or registered with the Hong Kong Securities and Futures Commission or an employee of such person? (if yes, please specify
+                <td>
+                    <p  class="linespace1-5">A person licensed by or registered with the Hong Kong Securities and Futures Commission or an employee of such person? (if yes, please specify
                     his/her CE no) <br>
-                    香港證券及期貨事務監察委員會持牌或註冊人士或該人士之僱員？（如是，謹請說明他 / 她的中央編號）
+                    香港證券及期貨事務監察委員會持牌或註冊人士或該人士之僱員？（如是，謹請說明他 / 她的中央編號） </p>
                     <table width="100%">
                         <tr>
                             <td width="25%">
@@ -808,11 +809,12 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     </table>
                 </td>
             </tr>
+            <tr ><td colspan="2"  height="3px"></td></tr>
             <tr>
                 <td width="5%" valign="top">(2)</td>
-                <td>An employee/licensed representative of Grand Partners Securities Limited (or a relative of such person)? (If yes, please provide the name of the
+                <td><p  class="linespace1-5">An employee/licensed representative of Grand Partners Securities Limited (or a relative of such person)? (If yes, please provide the name of the
                     employee/licensed representative is working with, his/her name and CE no.) <br>
-                    利盟證券有限公司之僱員/持牌代表或該人士之親屬？（如是，謹請提供該僱員/持牌代表、姓名及中央編號）
+                    利盟證券有限公司之僱員/持牌代表或該人士之親屬？（如是，謹請提供該僱員/持牌代表、姓名及中央編號） </p>
                     <table width="100%">
                         <tr>
                             <td width="25%">
@@ -845,7 +847,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     </table>
                 </td>
             </tr>
-
+            <tr ><td colspan="2"  height="3px"></td></tr>
             <tr>
                 <td width="5%" >(3)</td>
                 <td>
@@ -867,11 +869,12 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     </table>
                 </td>
             </tr>
+            <tr ><td colspan="2"  height="3px"></td></tr>
             <tr>
                 <td width="5%" valign="top">(4)</td>
-                <td>Spouse/Company has a margin account in Grand Partners Securities Limited? (If yes, please provide the account number of spouse in Grand Partners
+                <td><p  class="linespace1-5">Spouse/Company has a margin account in Grand Partners Securities Limited? (If yes, please provide the account number of spouse in Grand Partners
                     Securities Limited.) <br>
-                    配偶/公司於利盟證券有限公司擁有孖展證券戶口？（如是，謹請提供該戶口號碼）
+                    配偶/公司於利盟證券有限公司擁有孖展證券戶口？（如是，謹請提供該戶口號碼） </p>
                     <table width="100%">
                         <tr>
                             <td width="25%">
@@ -904,6 +907,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     </table>
                 </td>
             </tr>
+            <tr ><td colspan="2"  height="3px"></td></tr>
 
         </table>
         <div class="dark-p  pad mt-15">
@@ -973,7 +977,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
         </table>
         <div class="dark-p  pad mt-15">
-            Person(s) authorized to operate the Account 帳戶獲授權人士 No. of Signature required 所需簽名數目 ( )
+            <p  class="linespace1-5">Person(s) authorized to operate the Account 帳戶獲授權人士 No. of Signature required 所需簽名數目 ( )
             The Client’s Securities Account can be operated on the instructions of the Authorized Person. I (the Client) hereby declare that I (the Client) shall be fully
             responsible for any instructions given or purported to be given by the Authorized Person (including but not limiting to the verbal instructions or written
             instructions), and shall fully indemnify Grand Partners Securities Limited against all damages, losses, costs and expenses whatsoever incurred as a result of
@@ -986,7 +990,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             或書面指示)承擔全部責任，並會就利盟證券因該等獲授權人士之任何行為，不作為或遺漏而引致的一切賠償、損失、費用及開支向利盟證券作出
             全部彌償。<br>
             當本人(獲授權人士)於下列簽署欄內簽署後，即表示同意接受客戶的授權成為其獲授權人士，並同意承擔客戶之帳戶內之一切責任，亦須就利盟
-            證券因客戶及／或本人之任何行為，不作為或遺漏而引致的一切賠償、損失、費用及開支向利盟證券作出全部彌償。
+            證券因客戶及／或本人之任何行為，不作為或遺漏而引致的一切賠償、損失、費用及開支向利盟證券作出全部彌償。 </p>
         </div>
         <table border="1" width="100%" class="table">
             <tr>
@@ -1119,7 +1123,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </table>
         <div class="clear"></div>
         
-        <div class="page-footer mt-15">
+        <div class="page-footer mt-20">
             <div class="light-p pad left" style="width: 15%;">
                 2
             </div>
