footer at bottom

--- a/margin.html
+++ b/margin.html
@@ -722,6 +722,7 @@
         <div class="clear break-after"></div>
 
         <div class="mt10">&nbsp;</div>
+        <div class="posre h-100">
         <div class="dark-p  pad mt-15">
             SECTION B GENERAL INFORMATION 一般資料
         </div>
@@ -1137,6 +1138,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </div>
         </div>
         <div class="clear break-after"></div>
+        </div>
         
         <div class="mt10">&nbsp;</div>
         <div class="dark-p  pad mt-15">
