--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
                                 </td>
                                 <td class=" bod-right" width="15%">
                                     <p>
-                                        <input type="checkbox" id="secondary" class="checkbox-checked" />
+                                        <input type="checkbox" id="secondary" class="{{account_info.highest_education_id_secondary_checkbox_class}}" />
                                         <label for="secondary">Secondary 中學</label>
                                       </p>
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <p>
-                                        <input type="checkbox" id="post-secondary" class="checkbox-checked" />
+                                        <input type="checkbox" id="post-secondary" class="{{account_info.highest_education_id_college_checkbox_class}}" />
                                         <label for="post-secondary">Post Secondary 預科/專上學院</label>
                                       </p>
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <p>
-                                        <input type="checkbox" id="university"  />
+                                        <input type="checkbox" id="{{account_info.highest_education_id_university_checkbox_class}}"  />
                                         <label for="university">University or above 大學或以上</label>
                                       </p>
                                 </td>
