--- a/margin.html
+++ b/margin.html
@@ -97,13 +97,13 @@
                                     <strong>Name (in English): Mr/Mrs/Miss/Ms</strong>  &nbsp; &nbsp;  &nbsp; Surname:              
                                 </td>
                                 <td class=" bod-right" width="25%">
-                                  <strong>{{account_info.first_name_english}}</strong>
+                                  <strong>{{account_info.firstname_en}}</strong>
                                 </td>
                                 <td class="light-p bod-right" width="15%">
                                     <strong>Given Name:</strong>
                                 </td>
                                 <td width="25%">
-                                    <strong>{{account_info.last_name_english}}</strong>
+                                    <strong>{{account_info.lastname_en}}</strong>
                                 </td>
                             </tr>
                             
@@ -118,13 +118,13 @@
                                     <strong>姓名(中文):先生/太太/小姐/女士</strong>  &nbsp; &nbsp;  &nbsp; 姓::              
                                 </td>
                                 <td class=" bod-right"  width="25%">
-                                    <strong>{{account_info.first_name_chinese}}</strong>
+                                    <strong>{{account_info.firstname_zh}}</strong>
                                 </td>
                                 <td class="light-p bod-right" width="15%">
                                     <strong>名:</strong>
                                 </td>
                                 <td  width="25%">
-                                    <strong>{{account_info.last_name_chinese}}</strong>
+                                    <strong>{{account_info.lastname_zh}}</strong>
                                 </td>
                             </tr>
                             
@@ -186,19 +186,19 @@
                                 </td>
                                 <td class=" bod-right" width="15%">
                                     <p>
-                                        <input type="checkbox" id="secondary" class="checkbox-checked" />
+                                        <input type="checkbox" id="secondary" class="{{account_info.highest_education_id_secondary_checkbox_class}}" />
                                         <label for="secondary">Secondary 中學</label>
                                       </p>
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <p>
-                                        <input type="checkbox" id="post-secondary" class="checkbox-checked" />
+                                        <input type="checkbox" id="post-secondary" class="{{account_info.highest_education_id_college_checkbox_class}}" />
                                         <label for="post-secondary">Post Secondary 預科/專上學院</label>
                                       </p>
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <p>
-                                        <input type="checkbox" id="university"  />
+                                        <input type="checkbox" id="university" class="{{account_info.highest_education_id_university_checkbox_class}}"  />
                                         <label for="university">University or above 大學或以上</label>
                                       </p>
                                 </td>
