placeholder - employee duration

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                 
                                 <td class="light bod-right TODO_field" width="12%">
                                     <strong>Year of Service</strong><br>
-                                    服務僱主年期:
+                                    服務僱主年期: -
                                 </td>
                                 <td width="15%">
                                     <strong></strong>
@@ -449,6 +449,7 @@
                                         <tr>
                                             <td class="bod-right" width="33%">
                                                 <p>
+                                                    <!--TODO PH-->
                                                     <input type="checkbox" id="Direct" />
                                                     <label for="Direct"> <strong>Direct Mail</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 郵寄</label>
