placeholder - collect settlement

--- a/index.html
+++ b/index.html
@@ -449,15 +449,14 @@
                                         <tr>
                                             <td class="bod-right" width="33%">
                                                 <p>
-                                                    <!--TODO PH-->
-                                                    <input type="checkbox" id="Direct" />
+                                                    <!--<input type="checkbox" id="Direct" />-->
                                                     <label for="Direct"> <strong>Direct Mail</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 郵寄</label>
                                                   </p>
                                             </td>
                                             <td class="bod-right" width="33%">
                                                 <p>
-                                                    <input type="checkbox" id="Residential" class="{{account_info.settlement_collection_by_email_yesno_checkbox_class}}" />
+                                                    <input type="checkbox" id="Residential" class="{{account_info.settlement_collection_by_mail_yesno_checkbox_class}}" />
                                                     <label for="Residential"> <strong>Residential Address</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 住址</label>
                                                   </p>
