--- a/index.html
+++ b/index.html
@@ -532,13 +532,14 @@
                 <td width="20%">Equities 證券 </td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No"  />
+                        <input type="checkbox" id="No" class="{{account_info.stock_experience_id_no_checkbox_class}}" />
                         <label for="No">No 無</label>
                         </p></td>
                 <td class="bod-right" width="20%">
                     <p>
-                        <input type="checkbox" id="Yes"  />
-                        <label for="Yes">Yes 有   _____year (s) 年</label>
+                        <input type="checkbox" id="Yes" class="{{account_info.stock_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes">Yes 有   {{account.stockExperience.name_zh_CN}}</label>
+                        <!--<label for="Yes">Yes 有   _____year (s) 年</label>-->
                         </p>
                 </td>
                 <td width="20%">Futures & Options 期貨及期權 </td>
