--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 <td class="bod-right" width="20%">
                     <p>
                         <input type="checkbox" id="Yes" class="{{account_info.stock_experience_id_yes_checkbox_class}}" />
-                        <label for="Yes">Yes 有   {{account.stock_experience.name_zh_CN}}</label>
+                        <label for="Yes">Yes 有   {{account_info.stock_experience.name_zh_CN}}</label>
                         <!--<label for="Yes">Yes 有   _____year (s) 年</label>-->
                         </p>
                 </td>
