--- a/index.html
+++ b/index.html
@@ -538,48 +538,51 @@
                 <td class="bod-right" width="20%">
                     <p>
                         <input type="checkbox" id="Yes" class="{{account_info.stock_experience_id_yes_checkbox_class}}" />
-                        <label for="Yes">Yes 有 {{account_info.stock_experience_txt}}</label>
+                        <label for="Yes">Yes 有 {{account_info.stock_experience_id_txt}}</label>
                         <!--<label for="Yes">Yes 有   _____year (s) 年</label>-->
                         </p>
                 </td>
                 <td width="20%">Futures & Options 期貨及期權 </td>
                 <td class="bod0" width="9%"> 
                     <p>
-                        <input type="checkbox" id="No2"  />
+                        <input type="checkbox" id="No2" class="{{account_info.futures_options_experience_id_no_checkbox_class}}" />
                         <label for="No2">No 無</label>
                         </p>
                     </td>
                 <td class="bod-right" width="22%"> 
                     <p>
-                        <input type="checkbox" id="Yes2"  />
-                        <label for="Yes2">Yes 有 ______year (s) 年</label>
+                        <input type="checkbox" id="Yes2" class="{{account_info.futures_options_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes2">Yes {{account_info.futures_options_experience_id_txt}}</label>
+                        <!--<label for="Yes2">Yes 有 ______year (s) 年</label>-->
                         </p></td>
             </tr> 
             <tr>
                 <td width="20%">Derivative Product 衍生產品</td>
                 <td width="9%">  
                     <p>
-                        <input type="checkbox" id="No3"  />
+                        <input type="checkbox" id="No3" class="{{account_info.structured_product_experience_id_no_checkbox_class}}" />
                         <label for="No3">No 無</label>
                         </p>
                 </td>
                 <td class="bod-right" width="20%">
                     <p>
-                        <input type="checkbox" id="Yes3"  />
-                        <label for="Yes3">Yes 有 _____year (s) 年</label>
+                        <input type="checkbox" id="Yes3" class="{{account_info.structured_product_experience_id_no_checkbox_class}}" />
+                        <label for="Yes3">Yes {{account_info.structured_product_experience_id_txt}}</label>
+                        <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
                 <td width="20%">>Forex / Bullion 外匯交易/貴金屬 </td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No4"  />
+                        <input type="checkbox" id="No4" class="{{account_info.foreign_currency_gold_experience_id_no_checkbox_class}}" />
                         <label for="No4">No 無</label>
                         </p>
                  </td>
                 <td class="bod-right" width="22%">
                     <p>
-                        <input type="checkbox" id="Yes4"  />
-                        <label for="Yes4">Yes 有 ______year (s) 年</label>
+                        <input type="checkbox" id="Yes4" class="{{account_info.foreign_currency_gold_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes4">Yes {{account_info.foreign_currency_gold_experience_id_txt}}</label>
+                        <!--<label for="Yes4">Yes 有 ______year (s) 年</label>-->
                         </p>
                 </td>
             </tr>
@@ -587,14 +590,15 @@
                 <td width="20%">Others 其他</td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No5"  />
+                        <input type="checkbox" id="No5" class="{{account_info.other_experience_id_no_checkbox_class}}" />
                         <label for="No5">No 無</label>
                         </p>
                      </td>
                 <td class="" colspan="4" width="71%"> 
                     <p>
-                        <input type="checkbox" id="Yes5"  />
-                        <label for="Yes5">Yes 有 _____year (s) 年</label>
+                        <input type="checkbox" id="Yes5" class="{{account_info.other_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes5">Yes 有 {{account_info.other_experience_id_txt}}</label>
+                        <!--<label for="Yes5">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
             </tr>
