--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                         </p>
                 </td>
                 <td width="20%">Futures & Options 期貨及期權 </td>
-                <td class="bod0" width="9%"> 
+                <td class="bod0" width="9%"> eq
                     <p>
                         <input type="checkbox" id="No2" class="{{account_info.futures_options_experience_id_no_checkbox_class}}" />
                         <label for="No2">No 無</label>
@@ -566,7 +566,7 @@
                 </td>
                 <td class="bod-right" width="20%">
                     <p>
-                        <input type="checkbox" id="Yes3" class="{{account_info.structured_product_experience_id_no_checkbox_class}}" />
+                        <input type="checkbox" id="Yes3" class="{{account_info.structured_product_experience_id_yes_checkbox_class}}" />
                         <label for="Yes3">Yes {{account_info.structured_product_experience_id_txt}}</label>
                         <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
