--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                         </p>
                 </td>
                 <td width="20%">Futures & Options 期貨及期權 </td>
-                <td class="bod0" width="9%"> eq
+                <td class="bod0" width="9%">
                     <p>
                         <input type="checkbox" id="No2" class="{{account_info.futures_options_experience_id_no_checkbox_class}}" />
                         <label for="No2">No 無</label>
