--- a/margin.html
+++ b/margin.html
@@ -455,7 +455,7 @@
                                             </td>
                                             <td class="bod-right" width="33%">
                                                 <p>
-                                                    <input type="checkbox" id="Residential" class="{{account_info.settlement_collection_by_email_yesno_checkbox_class}}" />
+                                                    <input type="checkbox" id="Residential" class="{{account_info.settlement_collection_by_mail_yesno_checkbox_class}}" />
                                                     <label for="Residential"> <strong>Residential Address</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 住址</label>
                                                   </p>
@@ -530,53 +530,57 @@
                 <td width="20%">Equities 證券 </td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No"  />
+                        <input type="checkbox" id="No" class="{{account_info.stock_experience_id_no_checkbox_class}}" />
                         <label for="No">No 無</label>
                         </p></td>
                 <td class="bod-right" width="20%">
                     <p>
-                        <input type="checkbox" id="Yes"  />
-                        <label for="Yes">Yes 有   _____year (s) 年</label>
+                        <input type="checkbox" id="Yes" class="{{account_info.stock_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes">Yes 有 {{account_info.stock_experience_id_txt}}</label>
+                        <!--<label for="Yes">Yes 有   _____year (s) 年</label>-->
                         </p>
                 </td>
                 <td width="20%">Futures & Options 期貨及期權 </td>
                 <td class="bod0" width="9%"> 
                     <p>
-                        <input type="checkbox" id="No2"  />
+                        <input type="checkbox" id="No2" class="{{account_info.futures_options_experience_id_no_checkbox_class}}" />
                         <label for="No2">No 無</label>
                         </p>
                     </td>
                 <td class="bod-right" width="22%"> 
                     <p>
-                        <input type="checkbox" id="Yes2"  />
-                        <label for="Yes2">Yes 有 ______year (s) 年</label>
+                        <input type="checkbox" id="Yes2" class="{{account_info.futures_options_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes2">Yes {{account_info.futures_options_experience_id_txt}}</label>
+                        <!--<label for="Yes2">Yes 有 ______year (s) 年</label>-->
                         </p></td>
             </tr> 
             <tr>
                 <td width="20%">Derivative Product 衍生產品</td>
                 <td width="9%">  
                     <p>
-                        <input type="checkbox" id="No3"  />
+                        <input type="checkbox" id="No3" class="{{account_info.structured_product_experience_id_no_checkbox_class}}" />
                         <label for="No3">No 無</label>
                         </p>
                 </td>
                 <td class="bod-right" width="20%">
                     <p>
-                        <input type="checkbox" id="Yes3"  />
-                        <label for="Yes3">Yes 有 _____year (s) 年</label>
+                        <input type="checkbox" id="Yes3" class="{{account_info.structured_product_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes3">Yes {{account_info.structured_product_experience_id_txt}}</label>
+                        <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
                 <td width="20%">>Forex / Bullion 外匯交易/貴金屬 </td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No4"  />
+                        <input type="checkbox" id="No4" class="{{account_info.foreign_currency_gold_experience_id_no_checkbox_class}}" />
                         <label for="No4">No 無</label>
                         </p>
                  </td>
                 <td class="bod-right" width="22%">
                     <p>
-                        <input type="checkbox" id="Yes4"  />
-                        <label for="Yes4">Yes 有 ______year (s) 年</label>
+                        <input type="checkbox" id="Yes4" class="{{account_info.foreign_currency_gold_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes4">Yes {{account_info.foreign_currency_gold_experience_id_txt}}</label>
+                        <!--<label for="Yes4">Yes 有 ______year (s) 年</label>-->
                         </p>
                 </td>
             </tr>
@@ -584,14 +588,15 @@
                 <td width="20%">Others 其他</td>
                 <td width="9%"> 
                     <p>
-                        <input type="checkbox" id="No5"  />
+                        <input type="checkbox" id="No5" class="{{account_info.other_experience_id_no_checkbox_class}}" />
                         <label for="No5">No 無</label>
                         </p>
                      </td>
                 <td class="" colspan="4" width="71%"> 
                     <p>
-                        <input type="checkbox" id="Yes5"  />
-                        <label for="Yes5">Yes 有 _____year (s) 年</label>
+                        <input type="checkbox" id="Yes5" class="{{account_info.other_experience_id_yes_checkbox_class}}" />
+                        <label for="Yes5">Yes 有 {{account_info.other_experience_id_txt}}</label>
+                        <!--<label for="Yes5">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
             </tr>
@@ -791,7 +796,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                             <td width="25%">
                                 
                                 <span>
-                                    <input type="checkbox" id="noApplicant" class="{{account_info.identity_declaration1_id_1_class}}" />
+                                    <input type="checkbox" id="noApplicant" class="{{account_info.identity_declaration1_id_1_checkbox_class}}" />
                                     <label for="noApplicant">No 否</label>
                                 </span>
                             </td>
@@ -2275,15 +2280,15 @@ disclosure statement
         系統發出指示以及通過 貴公司的系統執行的交易渉及各種風險。本人並同意承擔該等風險。</p>
 <p class="linespace1-5">Password Collection 收取密碼方式 :</p>
 <p class="mt-20">
-    <input type="checkbox" id="Byemail" class="{{account_info.settlement_collection_by_email_yesno}}" />
+    <input type="checkbox" id="Byemail" class="{{account_info.password_collection_by_email_yesno}}" />
     <label for="Byemail">By email 電子郵件 (必須與本公司紀錄相同)</label>
 </p>
 <p class="mt-20">
-    <input type="checkbox" id="Bymail" class="{{account_info.settlement_collection_by_mail_yesno}}" />
+    <input type="checkbox" id="Bymail" class="{{account_info.password_collection_by_mail_yesno}}" />
     <label for="Bymail">By Mail 郵寄 (寄往與本公司紀錄相同地址)</label>
 </p>
 <p class="mt-20">
-    <input type="checkbox" id="Inperson" class="{{account_info.settlement_collection_in_person_yesno}}" />
+    <input type="checkbox" id="Inperson" class="{{account_info.password_collection_in_person_yesno}}" />
     <label for="Inperson">In person (客戶親自到取)</label>
 </p>
 <hr height="5">
