placeholder - account info

--- a/index.html
+++ b/index.html
@@ -1951,30 +1951,35 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td class="thbg">
                     Account Information 戶口資料
+
+
                 </td>
             </tr>
             <tr>
                 <td>
                     Account No. 戶口號碼
+                    {{account_info.bank_account_number}}
                 </td>
             </tr>
             <tr>
                 <td>
                     <p>Name in Chinese</p>
                     <p>客戶姓名 (中文)</p>
+                    {{account_info.firstname_zh}}{{account_info.lastname_zh}}
                 </td>
             </tr>
             <tr>
                 <td>
                     <p>Name in English</p>
                     <p>客戶姓名 (英文)</p>
+                    {{account_info.firstname_en}} {{account_info.lastname_en}}
                 </td>
             </tr>
             <tr>
                 <td>
                     <p>ID Document Type  &nbsp;  &nbsp;  &nbsp;
                         <span>
-                        <input type="checkbox" id="HKID " class="checkbox-checked-TODO" />
+                        <input type="checkbox" id="HKID " class="checkbox-checked" />
                         <label for="HKID ">HKID </label>
                       </span>&nbsp;  &nbsp;  &nbsp;
                       <span>
@@ -1994,7 +1999,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </tr><tr>
                 <td>
                     <p>ID Document No</p>
-                    <p>身份證明文件號碼</p>
+                    <p>身份證明文件號碼 {{account_info.identification_number}}</p>
                 </td>
             </tr>
 
@@ -2010,13 +2015,13 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td>
                     <p>
-                        <input type="checkbox" id="W-8BEN" class="checkbox-checked-TODO" />
+                        <input type="checkbox" id="W-8BEN" class={{account_info.us_residence_no_checkbox_class}} />
                         <label for="W-8BEN"> I, by ticking this box, declare that I am not a U.S. citizen. (To complete Form W-8BEN)<br>
                             &nbsp;  &nbsp;  &nbsp; 本人，通過在此格中加上剔號，謹此聲明本人並非美國公民。(需填寫 W-8BEN 表格) </label>
                         </p>
 
                       <p>
-                        <input type="checkbox" id="W-9" class="checkbox-checked-TODO" />
+                        <input type="checkbox" id="W-9" class={{account_info.us_residence_yes_checkbox_class}} />
                         <label for="W-9">I, by ticking this box, declare that I am a U.S. citizen. (To complete Form W-9)<br>
                             &nbsp;  &nbsp;  &nbsp; 本人，通過在此格中加上剔號，謹此聲明本人是美國公民。(需填寫 W-9 表格) </label>
                         </p>
