--- a/margin.html
+++ b/margin.html
@@ -94,7 +94,7 @@
                         <table width="100%" cellspacing="0">
                             <tr>
                                 <td class="light-p bod-right" width="35%"> 
-                                    <strong>Name (in English): Mr/Mrs/Miss/Ms</strong>  &nbsp; &nbsp;  &nbsp; Surname:              
+                                    <strong>Name (in English): Mr/Mrs/Miss/Ms</strong>  &nbsp; &nbsp;  &nbsp; <strong>Surname</strong>:              
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <strong>{{account_info.lastname_en}}</strong>
@@ -115,7 +115,7 @@
                         <table width="100%" cellspacing="0">
                             <tr>
                                 <td class="light-p bod-right" width="35%"> 
-                                    <strong>姓名(中文):先生/太太/小姐/女士</strong>  &nbsp; &nbsp;  &nbsp; 姓::              
+                                    <strong>姓名(中文):先生/太太/小姐/女士</strong>  &nbsp; &nbsp;  &nbsp; 姓:            
                                 </td>
                                 <td class=" bod-right"  width="25%">
                                     <strong>{{account_info.firstname_zh}}</strong>
@@ -569,7 +569,7 @@
                         <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
-                <td width="20%">>Forex / Bullion 外匯交易/貴金屬 </td>
+                <td width="20%">Forex / Bullion 外匯交易/貴金屬 </td>
                 <td width="9%"> 
                     <p>
                         <input type="checkbox" id="No4" class="{{account_info.foreign_currency_gold_experience_id_no_checkbox_class}}" />
@@ -2293,7 +2293,7 @@ disclosure statement
 </p>
 <hr height="5">
 
-<div class="mt-20 bod-top">
+<div class="mt-20 bod-top" style="padding-top: 30px;">
     <span class="bod-top2">Client Signature (s) 客戶簽署* :</span>
     <p>Date 日期 : <span class="bod-bottom m-width d-in" >
         <!--<strong>XXXXXXX</strong> -->
@@ -2424,9 +2424,10 @@ disclosure statement
     <p> On Duplicate</p>
     <p class="linespace1-5">I/We have read, understood and accept the terms of this Credit Facility Letter and request Grand Partners Securities
         Limited to provide the Credit Facility to me/us on the terms hereof.</p>
-    <p><span class="bod-bottom">
+    <p class="" style="margin-top: 20px;">
+        <span class="bod-bottom">
         <!--<strong>XXXXXXX</strong>-->
-    </span>> (Signature & confirm)
+    </span> (Signature & confirm)
     </p>
 
     <p>Client:</p>
