--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <table width="100%" cellspacing="0">
                             <tr>
                                 <td class="light bod-right" width="35%"> 
-                                    <strong>Name (in English): Mr/Mrs/Miss/Ms</strong>  &nbsp; &nbsp;  &nbsp; Surname:              
+                                    <strong>Name (in English): Mr/Mrs/Miss/Ms</strong>  &nbsp; &nbsp;  &nbsp; <strong>Surname</strong>:              
                                 </td>
                                 <td class=" bod-right" width="25%">
                                     <strong>{{account_info.lastname_en}}</strong>
@@ -115,7 +115,7 @@
                         <table width="100%" cellspacing="0">
                             <tr>
                                 <td class="light bod-right" width="35%"> 
-                                    <strong>姓名(中文):先生/太太/小姐/女士</strong>  &nbsp; &nbsp;  &nbsp; 姓::              
+                                    <strong>姓名(中文):先生/太太/小姐/女士</strong>  &nbsp; &nbsp;  &nbsp; 姓:              
                                 </td>
                                 <td class=" bod-right"  width="25%">
                                     <strong>{{account_info.firstname_zh}}</strong>
@@ -571,7 +571,7 @@
                         <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                 </td>
-                <td width="20%">>Forex / Bullion 外匯交易/貴金屬 </td>
+                <td width="20%">Forex / Bullion 外匯交易/貴金屬 </td>
                 <td width="9%"> 
                     <p>
                         <input type="checkbox" id="No4" class="{{account_info.foreign_currency_gold_experience_id_no_checkbox_class}}" />
@@ -2795,8 +2795,8 @@ disclosure statement
    </p>
    <hr height="5" class="mt-15">
 
-   <div class="mt-20 bod-top">
-       <span class="bod-top2">Client Signature (s) 客戶簽署* :</span>
+   <div class="mt-20 bod-top" style="padding-top: 30px;">
+       <span class="bod-top2" >Client Signature (s) 客戶簽署* :</span>
        <p>Date 日期 : span class="bod-bottom m-width d-in" >
            <!--<strong>XXXXXXX</strong> -->
            </span> 
