--- a/margin.html
+++ b/margin.html
@@ -138,7 +138,7 @@
                                 <td class="light-p bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right" width="30%">
+                                <td class=" bod-right" width="30%" valign="middle" style="padding-top: 10px;">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
@@ -228,9 +228,12 @@
                                             <td class="bod-bottom"><strong>{{account_info.address}}</strong></td>
                                         </tr>
                                         <tr>
-                                            <td>
-                                              <!-- <strong>XXXXXXXX</strong> -->
-                                            </td>
+                                            <td class="bod-bottom" ><!--<strong> </strong>--></td> 
+                                        </tr>
+
+                                        
+                                        <tr>
+                                            <td class="bod-bottom">&nbsp;</td> 
                                         </tr>
 
 
@@ -2625,7 +2628,7 @@ disclosure statement
             授權人姓名: <span class="bod-bottom m-width d-in" >
                 <!--<strong>XXXXXXXX</strong> -->
             </span> &nbsp;  &nbsp;  &nbsp;
-            開戶日期: _ <span class="bod-bottom m-width d-in" >
+            開戶日期: <span class="bod-bottom m-width d-in" >
                 <!--<strong>XXXXXXXX</strong> -->
             </span>
         </p>
