placeholder - us_residence_no_checkbox_class

--- a/margin.html
+++ b/margin.html
@@ -2607,13 +2607,13 @@ disclosure statement
     <tr>
         <td>
             <p>
-                <input type="checkbox" id="W-8BEN" class="checkbox-checked-TODO" />
+                <input type="checkbox" id="W-8BEN" class={{account_info.us_residence_no_checkbox_class}} />
                 <label for="W-8BEN"> I, by ticking this box, declare that I am not a U.S. citizen. (To complete Form W-8BEN)<br>
                     &nbsp;  &nbsp;  &nbsp; 本人，通過在此格中加上剔號，謹此聲明本人並非美國公民。(需填寫 W-8BEN 表格) </label>
                 </p>
 
               <p>
-                <input type="checkbox" id="W-9" class="checkbox-checked-TODO" />
+                <input type="checkbox" id="W-9" class={{account_info.us_residence_yes_checkbox_class}} />
                 <label for="W-9">I, by ticking this box, declare that I am a U.S. citizen. (To complete Form W-9)<br>
                     &nbsp;  &nbsp;  &nbsp; 本人，通過在此格中加上剔號，謹此聲明本人是美國公民。(需填寫 W-9 表格) </label>
                 </p>
