--- a/margin.html
+++ b/margin.html
@@ -138,7 +138,7 @@
                                 <td class="light-p bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right" width="30%" valign="middle" style="padding-top: 10px;">
+                                <td class=" bod-right right-align" width="30%" valign="middle" style="padding-top: 10px;">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
@@ -605,7 +605,7 @@
             </tr>
         </table>
 
-        <table width="100%" cellspacing="0" border="0" class="table mt-15">
+        <table width="100%" cellspacing="0" border="0" class="table mt-10">
             <tr>
                 <td>Investment Objectives <br>投資目標:  </td>
                 <td> 
