--- a/margin.html
+++ b/margin.html
@@ -521,7 +521,7 @@
             </table>
 
             
-        <div class="dark-p bod pad mt-15">
+        <div class="dark-p bod pad mt-10">
             Financial Profile 財務概況
         </div>
         <div class=" pad ">
@@ -605,7 +605,7 @@
             </tr>
         </table>
 
-        <table width="100%" cellspacing="0" border="0" class="table mt-10">
+        <table width="100%" cellspacing="0" border="0" class="table" style="margin-top: 5px;">
             <tr>
                 <td>Investment Objectives <br>投資目標:  </td>
                 <td> 
@@ -732,7 +732,7 @@
         <div class="container">
 
             <div class="mt10">&nbsp;</div>
-        <div class="dark-p  pad mt-15">
+        <div class="dark-p  pad mt-10">
             SECTION B GENERAL INFORMATION 一般資料
         </div>
         <div class="linespace1-5">
