--- a/margin.html
+++ b/margin.html
@@ -74,9 +74,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="">
+                    <td class="" style="height: 5px;">
                         &nbsp;
-                       
                     </td>
                 </tr>   
                 <tr>
