--- a/margin.html
+++ b/margin.html
@@ -74,7 +74,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="" style="height: 5px;">
+                    <td class="" style="height: 5px; padding: 2px;">
                         &nbsp;
                     </td>
                 </tr>   
@@ -520,7 +520,7 @@
             </table>
 
             
-        <div class="dark-p bod pad mt-10">
+        <div class="dark-p bod pad mt-5">
             Financial Profile 財務概況
         </div>
         <div class=" pad ">
