--- a/margin.html
+++ b/margin.html
@@ -1384,8 +1384,6 @@ opinion if I so wish. <br>
         <div class=" mt-10 pad linespace1-5">
             I confirm that I have provided the Risk Disclosure Statements and if applicable, Risk Disclosure Information in or accompanying the Client Agreement in a  language of the Applicant’s choice (English or Chinese), and have invited the Applicant to read such Risk Disclosure Statements and if applicable such Risk Disclosure Information, answer questions and take independent advice if the Applicant wishes.
             <br>本人確認已經按申請人所選擇語言（英文或中文）提供載或附於客戶協議之風險披露聲明，並已邀請申請人閱讀該 / 該等 (如適用) 風險披露聲明、回答問題及徵求獨立的意見。
-            
-
         </div>
 
         <table width="80%" class="mt-20">
@@ -1469,7 +1467,7 @@ opinion if I so wish. <br>
 
         <div class="clear mt-20">
             <div class="left">For Cash Securities Trading Account Proposed Trading Limit (HK$):</div>
-            <div class="left bod-bottom d-in" style="width:40%">
+            <div class="left bod-bottom d-in" style="width:40%; height: 40px;">
                <!--<strong>XXXXXXXX</strong> -->
             </div>
             <div class="right">Approved by:</div>
