--- a/margin.html
+++ b/margin.html
@@ -1467,7 +1467,7 @@ opinion if I so wish. <br>
 
         <div class="clear mt-20">
             <div class="left">For Cash Securities Trading Account Proposed Trading Limit (HK$):</div>
-            <div class="left bod-bottom d-in" style="width:40%; height: 40px;">
+            <div class="left bod-bottom d-in" style="width:40%; height: 30px;">
                <!--<strong>XXXXXXXX</strong> -->
             </div>
             <div class="right">Approved by:</div>
@@ -1477,10 +1477,10 @@ opinion if I so wish. <br>
         <div class="clear mt-20">
             <div class="left">For Margin Securities Trading Account Proposed Credit Limit (HK$):
             </div>
-            <div class="left bod-bottom d-in" style="width:22%">
+            <div class="left bod-bottom d-in" style="width:22%;height: 30px;">
                <!--<strong>XXXXXXXX</strong> -->
             </div>
-            <div class="right bod-bottom d-in" style="width:22%">
+            <div class="right bod-bottom d-in" style="width:22%;height: 30px;">
                 <!--<strong>XXXXXXXX</strong> -->
              </div>
             <div class="clear"></div>
