--- a/margin.html
+++ b/margin.html
@@ -1489,19 +1489,19 @@ opinion if I so wish. <br>
         <table class="mt-20" width="100%">
             <tr><td colspan="4">&nbsp;</td></tr>
                 <tr class="mt-15">
-                    <td width="33%">
+                    <td width="25%">
                         For Comm. Rate:
                     </td>
-                    <td width="33%">
-                        <div class="bod-bottom">
+                    <td width="25%">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!--<strong>XXXXXXXX</strong>-->
                         </div>
                     </td>
-                    <td width="33%">
+                    <td width="25%">
                         Min Charge (in HK$):
                     </td>
-                    <td width="33%">
-                        <div class="bod-bottom" >
+                    <td width="25%">
+                        <div class="bod-bottom">
                            <!--<strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
