--- a/margin.html
+++ b/margin.html
@@ -1489,7 +1489,7 @@ opinion if I so wish. <br>
         <table class="mt-20" width="100%">
             <tr><td colspan="4">&nbsp;</td></tr>
                 <tr class="mt-15">
-                    <td width="25%">
+                    <td width="20%">
                         For Comm. Rate:
                     </td>
                     <td width="25%">
@@ -1497,11 +1497,11 @@ opinion if I so wish. <br>
                           <!--<strong>XXXXXXXX</strong>-->
                         </div>
                     </td>
-                    <td width="25%">
+                    <td width="30%">
                         Min Charge (in HK$):
                     </td>
                     <td width="25%">
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" >
                            <!--<strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1512,7 +1512,7 @@ opinion if I so wish. <br>
                         AE Name:
                     </td>
                     <td>
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                          <!--<strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1532,7 +1532,7 @@ opinion if I so wish. <br>
                         Account opening approved by:
                     </td>
                     <td >
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1551,7 +1551,7 @@ opinion if I so wish. <br>
                         Name (please print):
                     </td>
                     <td >
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1559,7 +1559,7 @@ opinion if I so wish. <br>
                         Name( please print):
                     </td>
                     <td >
-                        <div class="bod-bottom" >
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1578,7 +1578,7 @@ opinion if I so wish. <br>
                         Date:
                     </td>
                     <td >
-                        <div class="bod-bottom" >
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1590,7 +1590,7 @@ opinion if I so wish. <br>
                         Facility letter received date :
                     </td>
                     <td >
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                              <!--<strong>XXXXXXXX</strong>-->
                           </div>
                     </td>
