--- a/margin.html
+++ b/margin.html
@@ -1313,7 +1313,7 @@ I / we agree to be bound by the provisions thereof. <br>
         <!--page3-->
         </div>
 
-        <div class="container pb85">
+        <div class="container">
 
             
         <div class="mt10">&nbsp;</div>
@@ -1639,7 +1639,7 @@ opinion if I so wish. <br>
         </div>
 
         <!--page4-->
-        </div>
+    </div>
 
         <div class="container">
             
